@@ -1,3 +1,8 @@
+2006-09-22  Mats Cronqvist  <locmacr@mwlx084>
+
+	* sherk.erl: fixed the call window combobox
+	* sherk_tab.erl: fixed bugs on cache file handling
+
 2006-09-21  Mats Cronqvist  <locmacr@mwlx084>
 
 	* src/gtknode.erl:   fixed up the gtknode:debug/0,1,2 functions
